--- a/crates/ignore/Cargo.toml
+++ b/crates/ignore/Cargo.toml
@@ -24,7 +24,7 @@ globset = { version = "0.4.15", path = "../globset" }
 log = "0.4.20"
 memchr = "2.6.3"
 same-file = "1.0.6"
-walkdir = "2.4.0"
+walkdir = { version = "2.4.0", git = "https://github.com/cosmicexplorer/walkdir", rev = "573d8aafa6709c2dae08ae85ea709c218f84bb87" }
 
 [dependencies.regex-automata]
 version = "0.4.0"
